# MECSR

./: .gitignore  Makefile  README.md  analyze_mall_pages.py  config.py  demo_full_scraping.py  enhanced_extractor.py  main.py  optimized_aggressive_scraper.py  optimized_scraper.py  pipeline_test.py  pyproject.toml  simple_mecsr_scraper.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
output/: mecsr_malls.db  mecsr_scraping_20250911_182738.json  mecsr_scraping_20250912_000427.json  mecsr_scraping_20250912_002542.json  mecsr_scraping_20250912_180539.json  mecsr_scraping_20250913_142810.json  pipeline_validation_report.json
processors/: data_processor.py
scrapers/: detail_extractor.py  pagination_crawler.py  site_scoper.py
storage/: storage_handler.py
tests/: test_data_processor.py  test_detail_extractor.py  test_pagination_crawler.py  test_site_scoper.py  test_storage_handler.py
utils/: __init__.py  constants.py  helpers.py  reporting.py
